Modernize core and AWS2 extensions: adopt List.of, String.formatted, and lambdas